# dlc_red

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
src/export_data/src/: export_data.c  export_data.h
src/export_data/test/: CMakeLists.txt  export_data_tests  export_data_tests.c
src/gradient/src/: gradient.c  gradient.h
src/gradient/test/: CMakeLists.txt  gradient_tests  gradient_tests.c
src/initialization_parameters/src/: initialization_parameters.c  initialization_parameters.h
src/initialization_parameters/test/: CMakeLists.txt  initialization_parameters_tests  initialization_parameters_tests.c
src/mnist/src/: load_mnist.c  load_mnist.h
src/mnist/test/: CMakeLists.txt  mnist_tests  mnist_tests.c
test/: CMakeLists.txt
